--- a/index.html
+++ b/index.html
@@ -1,47 +1,124 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <!-- Meta Tags -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Your website description here">
-    <meta name="keywords" content="HTML, CSS, Website">
-    <meta name="author" content="Your Name">
+    <title>Student Marksheet</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f6f9;
+        }
 
-    <!-- Title -->
-    <title>Your Website Title</title>
+        .marksheet {
+            width: 700px;
+            margin: 30px auto;
+            background: #ffffff;
+            padding: 20px;
+            border: 2px solid #000;
+        }
 
-    <!-- CSS Link -->
-    <link rel="stylesheet" href="style.css">
+        h1 {
+            text-align: center;
+            margin-bottom: 5px;
+        }
+
+        h3 {
+            text-align: center;
+            margin-top: 0;
+        }
+
+        .student-info {
+            margin: 20px 0;
+        }
+
+        .student-info p {
+            margin: 5px 0;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 15px;
+        }
+
+        table, th, td {
+            border: 1px solid black;
+        }
+
+        th, td {
+            padding: 8px;
+            text-align: center;
+        }
+
+        th {
+            background-color: #e0e0e0;
+        }
+
+        .result {
+            margin-top: 20px;
+            font-weight: bold;
+        }
+
+        .footer {
+            margin-top: 40px;
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
 
-    <!-- Header Section -->
-    <header>
-        <h1>Website Logo</h1>
-        <nav>
-            <a href="#">Home</a> |
-            <a href="#">About</a> |
-            <a href="#">Services</a> |
-            <a href="#">Contact</a>
-        </nav>
-    </header>
+<div class="marksheet">
+    <h1>ABC School</h1>
+    <h3>Student Marksheet</h3>
 
-    <!-- Main Content -->
-    <main>
-        <section>
-            <h2>Welcome</h2>
-            <p>This is a basic HTML template. You can edit this content.</p>
-        </section>
-    </main>
+    <div class="student-info">
+        <p><strong>Name:</strong> Sanket Dhaduk</p>
+        <p><strong>Class:</strong> MCA</p>
+        <p><strong>Roll No:</strong> 101</p>
+    </div>
 
-    <!-- Footer Section -->
-    <footer>
-        <p>&copy; 2026 Your Name. All Rights Reserved.</p>
-    </footer>
+    <table>
+        <tr>
+            <th>Subject</th>
+            <th>Total Marks</th>
+            <th>Obtained Marks</th>
+        </tr>
+        <tr>
+            <td>Mathematics</td>
+            <td>100</td>
+            <td>85</td>
+        </tr>
+        <tr>
+            <td>Computer</td>
+            <td>100</td>
+            <td>90</td>
+        </tr>
+        <tr>
+            <td>English</td>
+            <td>100</td>
+            <td>75</td>
+        </tr>
+        <tr>
+            <td>Science</td>
+            <td>100</td>
+            <td>80</td>
+        </tr>
+        <tr>
+            <th>Total</th>
+            <th>400</th>
+            <th>330</th>
+        </tr>
+    </table>
 
-    <!-- JavaScript Link -->
-    <script src="script.js"></script>
+    <div class="result">
+        Percentage: 82.5% <br>
+        Result: PASS
+    </div>
+
+    <div class="footer">
+        Signature
+    </div>
+
+</div>
 
 </body>
 </html>
